fix clients gap

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -99,6 +99,7 @@
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
+        gap: 36px 0;
     }
 
     .service__heading {
