--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,7 +183,7 @@ img {
     position: relative;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .decorators {
